--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Scraping the news using Cheerio and Mongoose",
   "main": "server.js",
-  "scripts": {},
+  "scripts": {
+    "start": "babel-node server.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/carladdg/news-scraper.git"
